Fixed spacing on case studies

--- a/public/a/c/_header.scss
+++ b/public/a/c/_header.scss
@@ -55,9 +55,11 @@ header {
 }
 
 .search-wrap{margin-top:121px;}
+.search-wrap.case-studies{margin-top: 0;}
 
 @media (max-width: 768px) {
 	.search-wrap{margin-top:0px;}
+	.search-wrap.case-studies{margin-top: 20px;}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {  
