--- a/public/a/c/screen.css
+++ b/public/a/c/screen.css
@@ -1132,9 +1132,15 @@ header {
 .search-wrap {
   margin-top: 121px; }
 
+.search-wrap.case-studies {
+  margin-top: 0; }
+
 @media (max-width: 768px) {
   .search-wrap {
-    margin-top: 0px; } }
+    margin-top: 0px; }
+
+  .search-wrap.case-studies {
+    margin-top: 20px; } }
 @media (min-width: 768px) and (max-width: 979px) {
   .search-wrap {
     margin-top: 155px; } }
